--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "predeploy": "next build",
+    "export": "next export",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
